<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context=".Relative">

        <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="138dp"
        android:layout_height="138dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/improfile" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="138dp"
        android:layout_height="138dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/circle" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="2dp"
        app:menu="@menu/bottombar"
        />



    <GridLayout
        android:layout_width="420dp"
        android:layout_height="280dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="67dp"
        android:rowCount="2"
        android:columnCount="3">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_row="0"
            android:layout_column="0"
            app:srcCompat="@drawable/im1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_row="0"
            android:layout_column="1"
            app:srcCompat="@drawable/im4" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_row="0"
            android:layout_column="2"
            app:srcCompat="@drawable/im2" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/im5" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_row="1"
            android:layout_column="1"
            app:srcCompat="@drawable/im3" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_row="1"
            android:layout_column="2"
            app:srcCompat="@drawable/im6" />
    </GridLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="0dp"
        android:text="@string/edit_profile" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="166dp"
        android:text="@string/_3431"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="346dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="6dp"
        android:text="@string/following" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="272dp"
        android:layout_marginTop="108dp"
        android:text="@string/followers" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="166dp"
        android:text="@string/posts" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="92dp"
        android:text="@string/_6530"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="22dp"
        android:text="@string/_217"
        android:textColor="#000000"
        android:textStyle="bold" />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAlignment="center" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="right"
            android:icon="@drawable/settings"
            android:textAlignment="textEnd" />

    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="-2dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/grid" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/list"  />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/location"  />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/tag"  />

    </com.google.android.material.tabs.TabLayout>


</RelativeLayout>



